--- a/components/chat/style.css
+++ b/components/chat/style.css
@@ -33,9 +33,9 @@
         background-color: rgb(29, 65, 98, 0.5);
       }
     }
-    * {
+    /* * {
       overflow: hidden;
-    }
+    } */
     .initial_screen_top_logo {
       padding: 3rem 0.5rem 1rem 0.5rem;
       .bot_welcome_text {
@@ -77,7 +77,7 @@
 
   .show_over_flow {
     * {
-      overflow: initial;
+      /* overflow: initial; */
     }
   }
 
